objects/sf_devops__Remote_Change__c.object
<CustomObject>
    <description>This is the local representation of a SourceMember from a remote development environment.  This will be used to store local state about the SourceMember (like which work item it is associated with).</description>
    <fields>
        <fullName>sf_devops__Change_Submission__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>A reference to the Change Submission that this change was submitted with.</description>
        <label>Change Submission</label>
        <referenceTo>sf_devops__Change_Submission__c</referenceTo>
        <relationshipName>Changes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sf_devops__Environment__c</fullName>
        <description>The Environment that this remote change was loaded from.</description>
        <label>Environment</label>
        <referenceTo>sf_devops__Environment__c</referenceTo>
        <relationshipName>Remote_Changes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>sf_devops__Member_Name__c</fullName>
        <description>The MemberName from our referenced SourceMembers</description>
        <label>Member Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf_devops__Member_Type__c</fullName>
        <description>The Member Type of our referenced SourceMembers</description>
        <label>Member Type</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf_devops__Remote_Change_By__c</fullName>
        <description>The name of the user on the remote system that this change was made by.</description>
        <label>Remote Change By</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf_devops__Remote_Change_On__c</fullName>
        <description>The date and time this change was made on the remote server.</description>
        <label>Remote Change On</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>sf_devops__Remote_Change_Type__c</fullName>
        <description>What type of change is this?</description>
        <label>Remote Change Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ADD</fullName>
                    <default>true</default>
                    <label>ADD</label>
                </value>
                <value>
                    <fullName>REMOVE</fullName>
                </value>
                <value>
                    <fullName>CHANGE</fullName>
                </value>
                <value>
                    <fullName>RENAME</fullName>
                </value>
                <value>
                    <fullName>MANUAL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Remote Change</label>
    <nameField>
        <displayFormat>C-{000000}</displayFormat>
        <label>Remote Change Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Remote Changes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>sf_devops__Project_Reference</fullName>
        <active>true</active>
        <description>Enforce Our Change Submission&apos;s Environment and our Environment are the same.</description>
        <errorConditionFormula>AND(
OR(
  ISNEW(),
  ISCHANGED(sf_devops__Change_Submission__c)
),
NOT(ISBLANK(sf_devops__Change_Submission__c)),
sf_devops__Change_Submission__r.sf_devops__Work_Item__r.sf_devops__Environment__c &lt;&gt; sf_devops__Environment__c

)</errorConditionFormula>
        <errorMessage>Cannot have a Change_Submission from a different environment.</errorMessage>
    </validationRules>
</CustomObject>